# routrie

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  bench.ipynb  pyproject.toml  requirements-bench.txt  requirements-dev.txt  test_routrie.py
.github/workflows/: python.yaml
python/routrie/: __init__.py  _routrie.pyi  routrie.pyi
src/: lib.rs
