
[project]
name = "routrie"
repository = "https://github.com/adriangb/routrie"
description = "Python wrapper for https://github.com/viz-rs/path-tree"
authors = [
    {name = "Adrian Garcia Badaracco"}
]
documentation = "https://github.com/adriangb/README.md"
license = { text = "MIT" }
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"

[build-system]
requires = ["maturin>=0.13.0b6<14"]
build-backend = "maturin"

[tool.maturin]
sdist-include = ["Cargo.lock"]
strip = true

[tool.isort]
profile = "black"
